--- a/pom.xml
+++ b/pom.xml
@@ -1,134 +1,135 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- JBoss, Home of Professional Open Source Copyright 2015, Red Hat, Inc. 
-  and/or its affiliates, and individual contributors by the @authors tag. See 
-  the copyright.txt in the distribution for a full listing of individual contributors. 
-  Licensed under the Apache License, Version 2.0 (the "License"); you may not 
-  use this file except in compliance with the License. You may obtain a copy 
-  of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-  by applicable law or agreed to in writing, software distributed under the 
-  License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-  OF ANY KIND, either express or implied. See the License for the specific 
-  language governing permissions and limitations under the License. -->
+and/or its affiliates, and individual contributors by the @authors tag. See 
+the copyright.txt in the distribution for a full listing of individual contributors. 
+Licensed under the Apache License, Version 2.0 (the "License"); you may not 
+use this file except in compliance with the License. You may obtain a copy 
+of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+by applicable law or agreed to in writing, software distributed under the 
+License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+OF ANY KIND, either express or implied. See the License for the specific 
+language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.wildfly.bom</groupId>
-    <artifactId>quickstart</artifactId>
-    <version>13.0.0.Final</version>
-    <relativePath />
-  </parent>
-  <artifactId>test</artifactId>
-  <groupId>com.softtrons.test</groupId>
-  <version>1.0.0</version>
-  <packaging>war</packaging>
-  <name>test heroku</name>
-  <description>probando subir wildlfy y mysql</description>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.wildfly.bom</groupId>
+        <artifactId>quickstart</artifactId>
+        <version>13.0.0.Final</version>
+        <relativePath />
+    </parent>
+    <artifactId>demos</artifactId>
+    <groupId>com.softtrons.test</groupId>
+    <version>1.0.0</version>
+    <packaging>war</packaging>
+    <name>demos-soft</name>
+    <description>Demo para presentacion</description>
 
-  <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-
-  <properties>
-    <db.url>${JDBC_DATABASE_URL}</db.url>
-    <db.user>${JDBC_DATABASE_USERNAME}</db.user>
-    <db.password>${JDBC_DATABASE_PASSWORD}</db.password>
-  </properties>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
 
-  <dependencies>
-	<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
+    <properties>
+        <db.url>${JDBC_DATABASE_URL}</db.url>
+        <db.user>${JDBC_DATABASE_USERNAME}</db.user>
+        <db.password>${JDBC_DATABASE_PASSWORD}</db.password>
+    </properties>
+
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
         </dependency>
-	
-    <!-- Import the CDI API, we use provided scope as the API is included 
-      in JBoss EAP -->
-    <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
 
-    <!-- Import the JPA API, we use provided scope as the API is included 
-      in JBoss EAP -->
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Import the CDI API, we use provided scope as the API is included 
+        in JBoss EAP -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-    <!-- Import the Common Annotations API (JSR-250), we use provided scope 
-      as the API is included in JBoss EAP -->
-    <dependency>
-      <groupId>org.jboss.spec.javax.annotation</groupId>
-      <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Import the JPA API, we use provided scope as the API is included 
+        in JBoss EAP -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-    <!-- Import the EJB API, we use provided scope as the API is included 
-      in JBoss EAP -->
-    <dependency>
-      <groupId>org.jboss.spec.javax.ejb</groupId>
-      <artifactId>jboss-ejb-api_3.2_spec</artifactId>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Import the Common Annotations API (JSR-250), we use provided scope 
+        as the API is included in JBoss EAP -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-    <!-- Import the JSF API, we use provided scope as the API is included 
-      in JBoss EAP -->
-    <dependency>
-      <groupId>org.jboss.spec.javax.faces</groupId>
-      <artifactId>jboss-jsf-api_2.2_spec</artifactId>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Import the EJB API, we use provided scope as the API is included 
+        in JBoss EAP -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-    <!-- Import the JPA API, we use provided scope as the API is included 
-      in JBoss EAP -->
-    <dependency>
-      <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-      <scope>provided</scope>
-    </dependency>
+        <!-- Import the JSF API, we use provided scope as the API is included 
+        in JBoss EAP -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.faces</groupId>
+            <artifactId>jboss-jsf-api_2.2_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-  </dependencies>
+        <!-- Import the JPA API, we use provided scope as the API is included 
+        in JBoss EAP -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-  <build>
-    <!-- Set the name of the WAR, used as the context root when the app is 
-      deployed -->
-    <!--<finalName>${project.artifactId}</finalName> -->
-    <finalName>ROOT</finalName>
+    </dependencies>
 
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <webResources>
-            <resource>
-              <directory>src/main/webapp</directory>
-              <filtering>true</filtering>
-              <includes>
-                <include>**/*.xml</include>
-              </includes>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <configuration>
-              <exportAntProperties>true</exportAntProperties>
-              <target>
-                <script language="javascript">
+    <build>
+        <!-- Set the name of the WAR, used as the context root when the app is 
+        deployed -->
+        <!--<finalName>${project.artifactId}</finalName> -->
+        <finalName>ROOT</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>src/main/webapp</directory>
+                            <filtering>true</filtering>
+                            <includes>
+                                <include>**/*.xml</include>
+                            </includes>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <configuration>
+                            <exportAntProperties>true</exportAntProperties>
+                            <target>
+                                <script language="javascript">
 			 <![CDATA[		
 			 
     				if (!String.prototype.encodeHTML) {
@@ -146,15 +147,15 @@
     			 project.setProperty("enc.db.password",project.getProperty("db.password").encodeHTML());
 			 
 			 ]]>
-                </script>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+                                </script>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
