--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ language governing permissions and limitations under the License. -->
         </license>
     </licenses>
 
-
+   
     <properties>
         <db.url>${JDBC_DATABASE_URL}</db.url>
         <db.user>${JDBC_DATABASE_USERNAME}</db.user>
@@ -119,6 +119,14 @@ language governing permissions and limitations under the License. -->
                             </includes>
                         </resource>
                     </webResources>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.6</version>
+                <configuration>
+                    <appName>demo-soft</appName>
                 </configuration>
             </plugin>
             <plugin>
