--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@ language governing permissions and limitations under the License. -->
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-<!--        <dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
-        </dependency>-->
+        </dependency>
 
         <!-- Import the CDI API, we use provided scope as the API is included 
         in JBoss EAP -->
@@ -103,7 +103,7 @@ language governing permissions and limitations under the License. -->
         <!-- Set the name of the WAR, used as the context root when the app is 
         deployed -->
         <!--<finalName>${project.artifactId}</finalName> -->
-        <finalName>ROOT</finalName>
+        <finalName>demo</finalName>
 
         <plugins>
             <plugin>
